==> zhangm0116/own-land/AFMCU2ground/AF_MCU2 ground/Bsp/stm32f4_eth.c <==
#include "rtthread.h"
#include "netif/ethernetif.h"
#include "lwipopts.h"
#include "stm32f4x7_eth.h"
#define MII_MODE
#define ETH_PHY_ADDRESS					0x05
#define netifGUARD_BLOCK_TIME		250
#define MAX_ADDR_LEN				6

static rt_err_t rt_stm32_eth_init(rt_device_t dev)
{
	int i;

	/* MAC address configuration */
	ETH_MACAddressConfig(ETH_MAC_Address0, (uint8_t*)&stm32_eth_device.dev_addr[0]);
	rt_kprintf("MAC Address:......%d.%d.%d.%d.%d.%d\r\n",stm32_eth_device.dev_addr[0],stm32_eth_device.dev_addr[1],stm32_eth_device.dev_addr[2],stm32_eth_device.dev_addr[3],stm32_eth_device.dev_addr[4],stm32_eth_device.dev_addr[5]);
	/* Initialize Tx Descriptors list: Chain Mode */
	ETH_DMATxDescChainInit(DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);
	/* Initialize Rx Descriptors list: Chain Mode  */
	ETH_DMARxDescChainInit(DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);

	/* Enable Ethernet Rx interrrupt */
	{
		for (i = 0; i < ETH_RXBUFNB; i++)
		{
			ETH_DMARxDescReceiveITConfig(&DMARxDscrTab[i], ENABLE);
		}
	}
	/* Enable MAC and DMA transmission and reception */
	ETH_Start();

	return RT_EOK;
}

rt_err_t rt_stm32_eth_tx(rt_device_t dev, struct pbuf* p)
{
	rt_err_t ret;
	struct pbuf *q;
	uint32_t l = 0;
	u8 *buffer;

	if ((ret = rt_sem_take(&tx_wait, netifGUARD_BLOCK_TIME)) == RT_EOK)
	{
		buffer = (u8 *)(DMATxDescToSet->Buffer1Addr);
		for (q = p; q != NULL; q = q->next)
		{
			rt_memcpy((u8_t*)&buffer[l], q->payload, q->len);
			l = l + q->len;
		}
		if (ETH_Prepare_Transmit_Descriptors(l) == ETH_ERROR)
		{
			rt_kprintf("Tx Error\n");
		}
		rt_sem_release(&tx_wait);
	}
	else
	{
		rt_kprintf("Tx Timeout\n");
		return ret;
	}

	return RT_EOK;
}

struct pbuf *rt_stm32_eth_rx(rt_device_t dev)
{
	struct pbuf *p, *q;
	u16_t len;
	uint32_t l = 0, i = 0;
	FrameTypeDef frame;
	u8 *buffer;
	__IO ETH_DMADESCTypeDef *DMARxNextDesc;

	p = RT_NULL;

	/* Get received frame */
	frame = ETH_Get_Received_Frame_interrupt();

	if (frame.length > 0)
	{
		/* check that frame has no error */
		if ((frame.descriptor->Status & ETH_DMARxDesc_ES) == (uint32_t)RESET)
		{
			//rt_kprintf("Get a frame %d buf = 0x%X, len= %d\n", framecnt++, frame.buffer, frame.length);
			/* Obtain the size of the packet and put it into the "len" variable. */
			len = frame.length;
			buffer = (u8 *)frame.buffer;

			/* We allocate a pbuf chain of pbufs from the pool. */
			p = pbuf_alloc(PBUF_RAW, len, PBUF_POOL);

			/* Copy received frame from ethernet driver buffer to stack buffer */
			if (p != NULL)
			{
				for (q = p; q != NULL; q = q->next)
				{
					rt_memcpy((u8_t*)q->payload, (u8_t*)&buffer[l], q->len);
					l = l + q->len;
				}
			}
		}

		/* Release descriptors to DMA */
		/* Check if received frame with multiple DMA buffer segments */
		if (DMA_RX_FRAME_infos->Seg_Count > 1)
		{
			DMARxNextDesc = DMA_RX_FRAME_infos->FS_Rx_Desc;
		}
		else
		{
			DMARxNextDesc = frame.descriptor;
		}

		/* Set Own bit in Rx descriptors: gives the buffers back to DMA */
		for (i = 0; i < DMA_RX_FRAME_infos->Seg_Count; i++)
		{
			DMARxNextDesc->Status = ETH_DMARxDesc_OWN;
			DMARxNextDesc = (ETH_DMADESCTypeDef *)(DMARxNextDesc->Buffer2NextDescAddr);
		}

		/* Clear Segment_Count */
		DMA_RX_FRAME_infos->Seg_Count = 0;


		/* When Rx Buffer unavailable flag is set: clear it and resume reception */
		if ((ETH->DMASR & ETH_DMASR_RBUS) != (u32)RESET)
		{
			/* Clear RBUS ETHERNET DMA flag */
			ETH->DMASR = ETH_DMASR_RBUS;

			/* Resume DMA reception */
			ETH->DMARPDR = 0;
		}
	}
	return p;
}

static void GPIO_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/* Enable GPIOs clocks */
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA
							| RCC_AHB1Periph_GPIOB
							| RCC_AHB1Periph_GPIOC
							| RCC_AHB1Periph_GPIOE, ENABLE);

	/* Enable SYSCFG clock */
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);

#ifdef MII_MODE
	SYSCFG_ETH_MediaInterfaceConfig(SYSCFG_ETH_MediaInterface_MII);
#elif defined RMII_MODE
	SYSCFG_ETH_MediaInterfaceConfig(SYSCFG_ETH_MediaInterface_RMII);
#endif

/************************************************************************
*	ETH_MDIO -------------------------> PA2
*	ETH_MDC --------------------------> PC1
*	ETH_MII_RX_CLK/ETH_RMII_REF_CLK---> PA1
*	ETH_MII_RX_DV/ETH_RMII_CRS_DV ----> PA7
*	ETH_MII_RXD0/ETH_RMII_RXD0 -------> PC4
*	ETH_MII_RXD1/ETH_RMII_RXD1 -------> PC5
*	ETH_MII_TX_EN/ETH_RMII_TX_EN -----> PB11
*	ETH_MII_TXD0/ETH_RMII_TXD0 -------> PB12
*	ETH_MII_TXD1/ETH_RMII_TXD1 -------> PB13

*	**** Just for MII Mode ****
*	ETH_MII_CRS ----------------------> PA0
*	ETH_MII_COL ----------------------> PA3
*	ETH_MII_TX_CLK -------------------> PC3
*	ETH_MII_RX_ER --------------------> PB10
*	ETH_MII_RXD2 ---------------------> PB0
*	ETH_MII_RXD3 ---------------------> PB1
*	ETH_MII_TXD2 ---------------------> PC2
*	ETH_MII_TXD3 ---------------------> PE2
***************************************************************************/
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	
	/* Configure PC1, PC4 and PC5 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1 | GPIO_Pin_4 | GPIO_Pin_5;
	GPIO_Init(GPIOC, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOC, GPIO_PinSource1, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOC, GPIO_PinSource4, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOC, GPIO_PinSource5, GPIO_AF_ETH);

	/* Configure PB11, PB12 and PB13 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11 | GPIO_Pin_12 | GPIO_Pin_13;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOB, GPIO_PinSource11, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOB, GPIO_PinSource12, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOB, GPIO_PinSource13, GPIO_AF_ETH);

	/* Configure PA1, PA2 and PA7 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1 | GPIO_Pin_2 | GPIO_Pin_7;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource1, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource2, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource7, GPIO_AF_ETH);

#ifdef MII_MODE
	/* Configure PC2, PC3 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2 | GPIO_Pin_3;
	GPIO_Init(GPIOC, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOC, GPIO_PinSource2, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOC, GPIO_PinSource3, GPIO_AF_ETH);

	/* Configure PB0, PB1, PB10 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_10;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOB, GPIO_PinSource0, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOB, GPIO_PinSource1, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOB, GPIO_PinSource10, GPIO_AF_ETH);

	/* Configure PA0, PA3 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_3;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource0, GPIO_AF_ETH);
	GPIO_PinAFConfig(GPIOA, GPIO_PinSource3, GPIO_AF_ETH);
	/* Configure PE2 */
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;
	GPIO_Init(GPIOE, &GPIO_InitStructure);
	GPIO_PinAFConfig(GPIOE, GPIO_PinSource2, GPIO_AF_ETH);
#endif
}

static void NVIC_Configuration(void)
{
	NVIC_InitTypeDef NVIC_InitStructure;

	/* Enable the Ethernet global Interrupt */
	NVIC_InitStructure.NVIC_IRQChannel = ETH_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);
}

void rt_hw_stm32_eth_init(void)
{
	u32_t  sn0=0;
	GPIO_Configuration();
	NVIC_Configuration();
	ETH_MACDMA_Config();

	sn0=*(vu32 *)(0x1FFF7A10);
	stm32_eth_device.dev_addr[0] = 0x00;
	stm32_eth_device.dev_addr[1] = 0x0e;
	stm32_eth_device.dev_addr[2] = 0xc6;
	stm32_eth_device.dev_addr[3]=(sn0>>16)&0XFF;   
	stm32_eth_device.dev_addr[4]=(sn0>>8)&0XFF;
	stm32_eth_device.dev_addr[5]=sn0&0XFF;
	
	
//	stm32_eth_device.dev_addr[3] = 0xc3;
//	stm32_eth_device.dev_addr[4] = 0x1a;
//	stm32_eth_device.dev_addr[5] = 0x88;

	stm32_eth_device.parent.parent.init = rt_stm32_eth_init;
	stm32_eth_device.parent.parent.open = rt_stm32_eth_open;
	stm32_eth_device.parent.parent.close = rt_stm32_eth_close;
	stm32_eth_device.parent.parent.read = rt_stm32_eth_read;
	stm32_eth_device.parent.parent.write = rt_stm32_eth_write;
	stm32_eth_device.parent.parent.control = rt_stm32_eth_control;
	stm32_eth_device.parent.parent.user_data = RT_NULL;

	stm32_eth_device.parent.eth_rx = rt_stm32_eth_rx;
	stm32_eth_device.parent.eth_tx = rt_stm32_eth_tx;

	/* init tx semaphore */
	rt_sem_init(&tx_wait, "tx_wait", 1, RT_IPC_FLAG_FIFO);

	/* register eth device */
	eth_device_init(&(stm32_eth_device.parent), "eth0");
	
}

void ETH_IRQHandler(void)
{
	/* Frame received */
	if (ETH_GetDMAFlagStatus(ETH_DMA_FLAG_R) == SET)
	{
		rt_err_t result;

		ETH_DMAClearITPendingBit(ETH_DMA_IT_R);

		/* a frame has been received */
		result = eth_device_ready(&(stm32_eth_device.parent));

		if (result != RT_EOK)
		{
			rt_kprintf("RX err =%d\n", result);
		}
	}
	if (ETH_GetDMAITStatus(ETH_DMA_IT_T) == SET) /* packet transmission */
	{
		ETH_DMAClearITPendingBit(ETH_DMA_IT_T);
	}

	ETH_DMAClearITPendingBit(ETH_DMA_IT_NIS);
}
